bookmark-alignment-fix

--- a/css/layout-css/small-card-style.upload.css
+++ b/css/layout-css/small-card-style.upload.css
@@ -721,9 +721,8 @@
 
 @media screen and (min-width: 640px) {
   .small-card-list-detail-content-wrapper .small-card-bookmark-holder {
-    top: -40px;
-    left: auto;
-    right: -30px;
+    top: -35px;
+    padding: 0px;
   }
 }
 
